ecp-invoicing/ecp-billing-api.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment-ecp-billing-api
  labels:
    env : prod
    app : main
    tier: backend
spec:
  selector:
    matchLabels:
      run: ecp-billing-api
  template:
    metadata:
      labels:
        run: ecp-billing-api
    spec:
      containers:
        - name : ecp-billing-api
          image: registry.int.platform.tatar.ru/billing/ecp-billing-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "700m"
              memory: "1024Mi"
      imagePullSecrets:
        - name: billing-harbor-secret

---
apiVersion: v1
kind: Service
metadata:
  name: service-ecp-billing-api
spec:
  selector:
    run: ecp-billing-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
