ecp-invoicing/ingress_issuer.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: billing-letsencrypt #должно соответствовать значению metadata.name в манифесте Issuer
  labels:
    argocd.argoproj.io/instance: billing-ecp
  name: web-ingress
spec:
  ingressClassName: nginx                       #указывается направление на nginx ingress controller
  rules:
    - host: billing-ecp.int.platform.tatar.ru
      http:
        paths:
          - backend:
              service:
                name: service-ecp-billing-frontend-operator
                port:
                  number: 80
            path: /operator
            pathType: Prefix

          - backend:
              service:
                name: service-ecp-billing-frontend-owner
                port:
                  number: 80
            path: /owner
            pathType: Prefix
  tls:
    - hosts:
        - billing-ecp.int.platform.tatar.ru
      secretName: billing-tls-cert
